--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eject": "react-scripts eject"
   },
   "engines": {
-    "node": "12.21.0",
+    "node": "12.21.0||14.17.0",
     "npm": "6.12.0"
   },
   "eslintConfig": {
