--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@alphasquad/outside-click": "0.0.1",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.0",
+    "@mapbox/mapbox-sdk": "^0.11.0",
     "@react-google-maps/api": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -23,6 +25,10 @@
     "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.2.0",
+    "react-mapbox-gl": "^5.1.1",
+    "mapbox-gl": "^2.1.1",
+    "mapbox-gl-circle": "^1.4.2",
+    "react-mapbox-autocomplete": "^0.2.3",
     "react-charts": "^2.0.0-beta.7",
     "react-content-loader": "^6.0.3",
     "react-cool-inview": "^1.2.1",
