--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "dependencies": {
     "@alphasquad/outside-click": "0.0.1",
-    "@material-ui/core": "^4.11.0",
-    "@material-ui/icons": "^4.9.1",
     "@mapbox/mapbox-gl-geocoder": "^4.7.0",
     "@mapbox/mapbox-sdk": "^0.11.0",
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@react-google-maps/api": "^2.0.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -21,20 +21,21 @@
     "formik": "^2.2.6",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.6.0",
+    "mapbox-gl": "^1.13.0",
+    "mapbox-gl-circle": "^1.4.2",
     "moment": "^2.29.1",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
     "react-alice-carousel": "^2.2.0",
-    "react-mapbox-gl": "^5.1.1",
-    "mapbox-gl": "^2.1.1",
-    "mapbox-gl-circle": "^1.4.2",
-    "react-mapbox-autocomplete": "^0.2.3",
     "react-charts": "^2.0.0-beta.7",
     "react-content-loader": "^6.0.3",
     "react-cool-inview": "^1.2.1",
     "react-dom": "^17.0.1",
     "react-google-maps": "^9.4.5",
     "react-image-lightbox": "^5.1.1",
+    "react-map-gl": "^6.0.0",
+    "react-mapbox-autocomplete": "^0.2.3",
+    "react-mapbox-gl": "^5.1.1",
     "react-material-ui-form-validator": "^2.1.1",
     "react-multi-carousel": "^2.6.2",
     "react-notifications": "^1.7.2",
@@ -60,8 +61,8 @@
   },
   "scripts": {
     "start": "node server.js",
-    "develop": "react-scripts start",
-    "build": "set \"GENERATE_SOURCEMAP=false\" && rimraf ./build && react-scripts build",
+    "develop": "DISABLE_ESLINT_PLUGIN=true react-scripts start",
+    "build": "DISABLE_ESLINT_PLUGIN=true set \"GENERATE_SOURCEMAP=false\" && rimraf ./build && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
